--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -15,6 +15,18 @@
 	align-items: center;
 }
 
+.player-wrapper {
+	position: relative;
+	padding-top: 56.25%
+		/* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
 /* .caruseleHeroBody 
 	{@extend .hero-body
 		flex-grow: 1;
